--- a/src/main/webapp/WEB-INF/views/book/show.html
+++ b/src/main/webapp/WEB-INF/views/book/show.html
@@ -5,17 +5,28 @@
     <title>Info about book</title>
 </head>
 <body>
-<p th:text="${'Title of the book: ' + books.getTitle()}">VALUE</p>
-<p th:text="${'Author of the book: ' + books.getAuthor()}">VALUE</p>
-<p th:text="${'Year of production: ' + books.getYear()}">VALUE</p>
+<p th:text="${'Название книги: ' + books.getTitle()}">VALUE</p>
+<p th:text="${'Автор книги: ' + books.getAuthor()}">VALUE</p>
+<p th:text="${'Год выпуска: ' + books.getYear()}">VALUE</p>
+
+<div th:if = "${check}" >
+    <span>Книга непросрочена</span>
+</div>
+
+<div th:if = "${!check}" >
+    <span>Книга просрочена</span>
+</div>
+
 
 <div th:if = "${owner}" >
     <span>Книга сейчас у </span> <span th:text = "${owner.getFirst_name() + ' ' + owner.getSurname() + ' ' + owner.getPatronymic()}" >Owner</span>
     <form th:method="Patch" th:action="@{/people/book/free/{book_id}(book_id=${books.getBook_id()})}">
+
         <input type = "submit" value="Освободить книгу">
     </form>
-
 </div>
+
+
 
 <div th:if= "${people}" >
     <span>Эта книга свободна. Кому назначить ее?</span>
@@ -32,10 +43,10 @@
 
 
 <input type="submit" value = "Назначить книгу человеку">
+
+
 </form >
 </div>
-
-
 
 
 <br/>
